# ur5_ws

./: .gitignore  .gitmodules  README.md
src/ur5_volcani_description/: CMakeLists.txt  package.xml
src/ur5_volcani_description/launch/: ur5_volcani_moveit.launch.py  ur5_volcani_sim_control.launch.py  ur5_volcani_sim_moveit.launch.py
src/ur5_volcani_description/rviz/: config.rviz
src/ur5_volcani_description/scripts/: publish_collision_objects.py
src/ur5_volcani_description/srdf/: ur5_volcani.srdf.xacro
src/ur5_volcani_description/urdf/: ur5_volcani.urdf.xacro
src/weed_detector/: CMakeLists.txt  package.xml
src/weed_detector/src/: weed_detection_node
src/weed_detector/weed_detector_py/: weed_detection_node.py
